--- a/Tual.html
+++ b/Tual.html
@@ -11,7 +11,7 @@
    <marquee>hello guys ini adalah web elvan</marquee>
    <font color="#00BB00">NAICE ELVAN PRO</font>
    
-   <img src="1332.png" width="100px" height="100px">
+   <img src="https://giphy.com/gifs/bread-L3nWlmgyqCeU8" width="100px" height="100px">
   
   
  <img src="elvan33.jpg" width="380px" height="240px">
