--- a/Tual.html
+++ b/Tual.html
@@ -14,7 +14,7 @@
    <img src="https://giphy.com/gifs/bread-L3nWlmgyqCeU8" width="100px" height="100px">
   
   
- <img src="elvan33.jpg" width="380px" height="240px">
+ <img src="https://giphy.com/gifs/bread-L3nWlmgyqCeU8" width="380px" height="240px">
   
 hello guys silahkan subscribe channel gua
 
